first shot to separate test in unit and integration tests (via pom)