@@ -880,6 +880,61 @@
           </execution>
         </executions>
       </plugin>
+
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+				<excludes>
+					<exclude>**/integrationTests</exclude>
+				</excludes>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>junit</groupId>
+						<artifactId>junit</artifactId>
+						<version>${junit.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.8</version>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>verify</id>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<redirectTestOutputToFile>target/test-output.log</redirectTestOutputToFile>
+					<includes>
+						<include>**/*integrationTests</include>
+					</includes>
+					<excludes>
+						<exclude>**/*</exclude>
+					</excludes>
+					<forkMode>always</forkMode>
+<!-- 					<argLine>-Xmx1024m -XX:MaxPermSize=640m</argLine> -->
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>junit</groupId>
+						<artifactId>junit</artifactId>
+						<version>${junit.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 			
 			
 		</plugins>
